# ebook-sorter

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.slim  README.md  ebook-sorter.sh  pyproject.toml
.github/workflows/: publish.yml
pytest-of-faisal/: pytest-current
pytest-of-faisal/pytest-24/: test_confidence_with_isbncurrent  test_does_not_include_originalcurrent  test_epub_isbn_from_identifiercurrent  test_epub_metadatacurrent  test_extract_metadata_emptycurrent  test_extract_metadata_has_publcurrent  test_extract_metadatacurrent  test_extract_text_emptycurrent  test_extract_text_first_last_pcurrent  test_extract_textcurrent  test_finds_isbn_in_pdfcurrent  test_full_pipeline_epubcurrent  test_full_pipeline_extracts_mecurrent  test_load_config_from_tomlcurrent  test_move_file_dry_runcurrent  test_move_file_handles_collisicurrent  test_move_filecurrent  test_no_isbn_foundcurrent  test_no_metadatacurrent  test_omits_none_fieldscurrent  test_organize_end_to_endcurrent  test_pdf_metadatacurrent  test_reads_existingcurrent  test_returns_empty_when_tessercurrent  test_returns_none_on_invalid_jcurrent  test_returns_none_when_missingcurrent  test_round_trip_with_seriescurrent  test_sourcecurrent  test_unsupported_formatcurrent  test_writes_jsoncurrent
pytest-of-faisal/pytest-25/: test_confidence_with_isbncurrent  test_does_not_include_originalcurrent  test_epub_isbn_from_identifiercurrent  test_epub_metadatacurrent  test_extract_textcurrent  (+25 more)
tests/: conftest.py  test_cli.py  test_config.py  test_integration.py  test_isbn.py  test_models.py  test_organizer.py  test_pipeline.py  test_sidecar.py
(+81 files in other folders)
