[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebook-sorter"
version = "0.1.0"
description = "Organize ebook collections by extracting metadata and renaming files"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pymupdf>=1.24",
    "ebooklib>=0.18",
    "isbnlib>=3.10",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "respx>=0.21",
]

[project.scripts]
ebook-sorter = "ebook_sorter.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ebook_sorter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
