[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ebook-sorter"
dynamic = ["version"]
description = "Organize ebook collections by extracting metadata and renaming files"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pymupdf>=1.24",
    "ebooklib>=0.18",
    "isbnlib>=3.10",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "respx>=0.21",
]

[project.scripts]
ebook-sorter = "ebook_sorter.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ebook_sorter/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ebook_sorter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
